--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en" data-theme="winter">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="180x180"
+			href="https://unsplash.com/apple-touch-icon.png"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + Preact</title>
+		<title>Beautiful Free Images & Pictures | Unsplash</title>
 	</head>
 	<body>
 		<div id="app"></div>
