--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en" data-theme="winter">
 	<head>
 		<meta charset="UTF-8" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="apple-touch-icon"
 			type="image/png"
